# FinalWork

./: CMakeLists.txt  LICENSE  function.cpp  task.cpp
.github/workflows/: tmp.yml
tests/: test_all.cpp
